<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.vde.tools</groupId>
	<artifactId>YoutubeDLGui</artifactId>
	<version>2.0</version>
	<packaging>jar</packaging>

	<name>YoutubeDLGui</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<id>package</id>
						<phase>package</phase>
						<configuration>
							<target>
								<mkdir dir="target/package" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>assembly</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/package</outputDirectory>
							<resources>
								<resource>
									<directory>lib</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeGroupIds>com.nativelibs4java</includeGroupIds>
							<outputDirectory>target/package</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>fr.vde.youtubedlgui.Gui</mainClass>
						</manifest>
						<manifestEntries>
							<SplashScreen-Image>splash.png</SplashScreen-Image>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<version>2.4.1</version>
				<executions>
					<execution>
						<id>l4j-clui</id>
						<phase>assembly</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<headerType>gui</headerType>
							<icon>src/main/resources/YoutubeDLGui.ico</icon>
							<outfile>target/package/YoutubeDLGui.exe</outfile>
							<jar>target/${project.name}-${project.version}.jar</jar>
							<errTitle>YoutubeDLGui</errTitle>
							<classPath>
								<mainClass>fr.vde.youtubedlgui.Gui</mainClass>
								<addDependencies>true</addDependencies>
								<preCp>anything</preCp>
							</classPath>
							<jre>
								<path>C:/Program Files/Eclipse
									Adoptium/jdk-17.0.7.7-hotspot</path>
								<minVersion>17</minVersion>
								<opts>
									<opt>-Djava.endorsed.dirs=./endorsed</opt>
								</opts>
							</jre>
							<versionInfo>
								<fileVersion>2.0.0.0</fileVersion>
								<txtFileVersion>2.0</txtFileVersion>
								<fileDescription>Youtube Downloader</fileDescription>
								<copyright>(c) Vincent DEBOSSE</copyright>
								<productVersion>1.1.0.0</productVersion>
								<txtProductVersion>txt product version</txtProductVersion>
								<productName>Youtube D/L GUI</productName>
								<internalName>youtubedlgui</internalName>
								<originalFilename>YoutubeDLGui.exe</originalFilename>
							</versionInfo>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<filters>
						<filter>src/assembly/filter.properties</filter>
					</filters>
					<descriptors>
						<descriptor>src/assembly/assembly.xml</descriptor>
					</descriptors>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.nativelibs4java/bridj -->
		<dependency>
			<groupId>com.nativelibs4java</groupId>
			<artifactId>bridj</artifactId>
			<version>0.7.0</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
